# aula17_aovivo

./: database.db  exemplo_com_sqlmodel.py  pyproject.toml
